web dev startup updates

--- a/cookbook/appetizers/web-dev-startup.html
+++ b/cookbook/appetizers/web-dev-startup.html
@@ -1264,7 +1264,35 @@
                                 Click "Open in Visual Studio" in 
                                 the middle section to do exactly 
                                 what the button says: open up your 
-                                repository in Visual Studio Code
+                                repository in Visual Studio Code.
+                            </p>
+                            
+                            <p class="indent">
+                                Occasionally, the shortcut 
+                                "Open in Visual Studio Code" 
+                                button in Github Desktop doesn't 
+                                work (usually due to personal 
+                                computer configurations).
+                            </p>
+                            <p class="indent">
+                                If that occurs, don't panic; 
+                                you'll just have to open up 
+                                your repository manually.
+                            </p>
+                            <p class="indent">
+                                Open Visual Studio Code yourself, and then go
+                                to the top menu and select File -> Open Folder.
+                            </p>
+                            <p class="indent">
+                                Then navigate to 
+                                <br>
+                                Documents -> Github -> 
+                                your repository folder
+                                <br>
+                                and select that folder to open.
+                            </p>
+                            <p class="indent">
+                                That should get you back on track!
                             </p>
                         </div>
                         <div class="imageContainer">
@@ -1295,31 +1323,15 @@
                                 two documents at the top left 
                                 of the application)
                             </p>
-                            <p>
-                                Occasionally, the shortcut button 
-                                in Github Desktop doesn't 
-                                work (usually due to personal 
-                                computer configurations).
-                            </p>
-                            <p>
-                                If that occurs, don't panic; 
-                                you'll just have to open up 
-                                your repository manually by 
-                                going to the top menu and 
-                                selecting <br> File -> Open Folder.
-                            </p>
-                            <p>
-                                Then navigate to 
-                                <br>
-                                Documents -> Github -> 
-                                your repository folder
-                                <br>
-                                and select that folder to open.
+                            <p class="indent">
+                                If you still don't see your repository name,
+                                follow the indented instructions in the previous
+                                step.  That should get you back on track!
                             </p>
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/web-dev-startup/repoinVScode.png" 
+                                src="images/web-dev-startup/repoinVScode_v2.png" 
                                 alt="Your repository loaded in Visual Studio Code"
                             >
                             <figcaption>
@@ -1352,15 +1364,31 @@
                                 in the Code Skeleton.
                             </p>
                             <p>
-                                In Visual Studio Code, 
-                                right-click your code repository
-                                and select "New folder..."
+                                In Visual Studio Code, make sure you
+                                have the Explorer tab open.
+                            </p>
+                            <p class="indent">
+                                If not, click the icon that looks like two 
+                                documents on top of each other.
                             </p>
                             <p>
-                                Then name the new folder "code-skeleton"
+                                Then, click the "New Folder..." icon that will 
+                                appear when you hover over the Explorer panel.
+                            </p>
+                            <p>
+                                Name the new folder "code-skeleton", and you'll
+                                see a folder within your repository named 
+                                "code-skeleton".
                             </p>
                         </div>
                         <div class="imageContainer">
+                            <img 
+                                src="images/web-dev-startup/codeSkeleton_0.png" 
+                                alt="Opening the Explorer panel and creating a new folder" 
+                            >
+                            <figcaption>
+                                Opening the Explorer panel and creating a new folder
+                            </figcaption>
                             <img 
                                 src="images/web-dev-startup/codeSkeleton_1.png" 
                                 alt="After creating the code-skeleton folder" 
@@ -1421,13 +1449,14 @@
                             <p>
                                 To do so, right-click your 
                                 new "code-skeleton" folder
-                                and select "New folder..." again
+                                and select "New folder..." again.
                             </p>
                             <p>
                                 <strong>
                                     Make sure you right-click 
-                                    the "code-skeleton" folder
-                                    and not the "css" folder! 
+                                    the actual text "code-skeleton"
+                                    and not "css" or the empty space to the 
+                                    right! 
                                     <br><br>
                                     If you don't, you may
                                     accidentally create the 
@@ -1437,12 +1466,11 @@
                                 </strong>
                             </p>
                             <p>
-                                Name the new folder "images"
+                                Name the new folder "images".
                             </p>
                             <p>
                                 Your Code Skeleton should 
                                 resemble the image on the right.
-                                Now we just need to create the HTML file!
                             </p>
                         </div>
                         <div class="imageContainer">
@@ -1460,16 +1488,16 @@
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
-                                Finally, you're going to 
+                                Next, you're going to 
                                 create your first HTML file!
                             </p>
                             <p>
-                                Right-click your new "code-skeleton" 
-                                folder one last time
-                                and select "New file..." this time
+                                Right-click your "code-skeleton" 
+                                folder once again, but select "New file..." 
+                                this time.
                             </p>
                             <p>
-                                Name the new file "index.html"
+                                Name the new file "index.html".
                             </p>
                             <p>
                                 After creating the file, 
@@ -1480,7 +1508,7 @@
                                 However, we're not going to stop 
                                 there; we're also going 
                                 to have you "write" some code 
-                                in there before we wrap up!
+                                in there!
                             </p>
                         </div>
                         <div class="imageContainer">
@@ -1501,7 +1529,11 @@
                                 In truth, we're just going to 
                                 have you autogenerate an
                                 HTML template, so you won't 
-                                truly be "writing" any code.
+                                really be "writing" much code.
+                            </p>
+                            <p class="indent">
+                                Don't worry, we don't expect you to know 
+                                ANYTHING about what this code is doing (yet!).   
                             </p>
                             <p>
                                 In your new index.html file, 
@@ -1544,7 +1576,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/web-dev-startup/htmltemplate_1.png" 
+                                src="images/web-dev-startup/htmltemplate_1_v2.png" 
                                 alt="The autogenerated HTML5 code template" 
                             >
                             <figcaption>
@@ -1580,7 +1612,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/web-dev-startup/htmltemplate_2.png" 
+                                src="images/web-dev-startup/htmltemplate_2_v2.png" 
                                 alt="Fixing the autogenerated HTML5 code template" 
                             >
                             <figcaption>
@@ -1593,8 +1625,50 @@
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
-                                We're almost done. Notice the 
-                                little circle to the right 
+                                Now, you're actually going to have to write some
+                                code.
+                            </p>
+                            <p>
+                                Put your cursor at the end of the line with 
+
+                                &lt;title&gt;Document&lt;/title&gt;
+
+                                in it (it's probably around line 6).
+                            </p>
+                            <p>
+                                Then hit 
+                                RETURN (or ENTER for PCs) to start a new line.
+                            </p>
+                            <p>
+                                On this new line, add the following line of
+                                code (feel free to copy/paste it from here 
+                                into your code file): 
+                            </p>
+                            <p>
+                                <code>&lt;link href="css/style.css" rel="stylesheet"&gt;</code>
+                            </p>
+                            <p>
+                                When you're done, your code should look like the 
+                                image to the right.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img 
+                                src="images/web-dev-startup/htmltemplate_2_5.png" 
+                                alt="Adding in the link element" 
+                            >
+                            <figcaption>
+                                Adding in the link element
+                            </figcaption>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                We're almost done with your HTML file. 
+                                Notice the little circle to the right 
                                 of the file name in the 
                                 top tab of the screenshot? 
                                 That means the file is not saved.
@@ -1624,6 +1698,99 @@
                             <figcaption>
                                 The corrected autogenerated HTML5 
                                 code template, unsaved
+                            </figcaption>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                We've almost finished your Code Skeleton. 
+                                Next, we're going to add in a CSS file.
+                            </p>
+                            <p>
+                                Right-click on the "css" folder, and select 
+                                the "New File..." option. 
+                            </p>
+                            <p>
+                                Name the new file "style.css" this time.
+                            </p>
+                            <p>
+                                When done correctly, your Explorer should 
+                                resemble the screenshot at the right.
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img 
+                                src="images/web-dev-startup/codeSkeleton_5.png" 
+                                alt="Adding style.css into the css folder" 
+                            >
+                            <figcaption>
+                                Adding style.css into the css folder
+                            </figcaption>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="sideBySide">
+                        <div class="textContainer">
+                            <p>
+                                Now, double click style.css to open it up 
+                                if it isn't open already.  We're going to have 
+                                you write (well, copy) some CSS.
+                            </p>
+                            <p class="indent">
+                                Unless you have previous experience coding, you 
+                                probably won't have a clue what any of this 
+                                means.
+                            </p>
+                            <p class="indent">
+                                That's okay! We don't expect you to!
+                                This is just setting you up for success later 
+                                on when we make our way to CSS.
+                            </p>
+                            <p>
+                                Add the following code into the file (again, 
+                                feel free to copy/paste it directly from here):
+                            </p>
+                            <p>
+                                <code>
+                                    * {
+                                    <br>
+                                    &nbsp;&nbsp;&nbsp;&nbsp;box-sizing: border-box;
+                                    <br>
+                                    }
+                                    <br>
+                                    <br>
+                                    body {
+                                    <br>
+                                    &nbsp;&nbsp;&nbsp;&nbsp;margin: 0px;
+                                    <br>
+                                    &nbsp;&nbsp;&nbsp;&nbsp;font-family: sans-serif; 
+                                    <br>
+                                    }
+                                </code>
+                            </p>
+                            <p>
+                                When complete, your code should look like the 
+                                screenshot to the right.
+                            </p>
+                            <p>
+                                Make sure to save your style.css file as well.
+                            </p>
+                            <p>
+                                Once you do, you're done setting up your 
+                                Code Skeleton!
+                            </p>
+                        </div>
+                        <div class="imageContainer">
+                            <img 
+                                src="images/web-dev-startup/csstemplate_1.png" 
+                                alt="Adding style.css into the css folder" 
+                            >
+                            <figcaption>
+                                Adding style.css into the css folder
                             </figcaption>
                         </div>
                     </div>
