--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>GDWD 105 AGENDA (6022 Cohort)</title>
+        <title>GDWD 105 AGENDA (2028 Cohort)</title>
         <meta name="description" content="Here's what we're doing in class today!">
         <link href="css/agenda.css" rel="stylesheet">
     </head>
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for December 13th</h1>
-            <h3>Week 27 Day 3 (Career Services)</h3>
+            <h1>GDWD 105 - Agenda for January 3rd</h1>
+            <h3>Week 19 Day 1 (Intro to CMS)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Which of your remaining classes are you most excited 
-                            for: Motion Graphics (106), Layout Design (107), or
-                            the Portfolio course (108)?
+                            How do you feel about the idea of coding?
                         </li>
                     </ul>
-                    <div class="img-container more-space final-black">
+                    <div class="img-container ">
                         <img 
-                            src="images/finalday.jpg"
-                            alt="final day"
+                            src="images/anxious.webp"
+                            alt="things that make me anxious"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Personal Brand Style Guide</li>
-                        <li><span class="type">Project</span>Creative Resume</li>
+                        <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
+                        <li><span class="type">Exercise</span>My First Blog Post</li>
                     </ul>
                 </div>
 
@@ -38,23 +36,24 @@
                         <h3>Announcements (9am-9:10am)</h3>
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Career Development Tips Refresher</li>
-                            <li><span class="type">Project</span>Personal Brand Style Guide [cont.]</li>
+                            <li><span class="type">Resources</span>Course Overview and Policies</li>
+                            <li><span class="type">PowerPoint</span>Intro to CMS</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">SURVEY</span>End of Course Surveys w/ Lia</li>
-                            <li><span class="type">Project</span>Creative Resume</li>
+                            <li><span class="type">Exercise</span>WordPress Sandbox Site Creation</li>
+                            <li><span class="type">Demo</span>Intro to WordPress</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Creative Resume [cont.]</li>
+                            <li><span class="type">Demo</span>Intro to WordPress (cont.)</li>
+                            <li><span class="type">Exercise</span>My First Blog Post</li>
                         </ul>
                     </div>
                 </div>
