web dev startup updates

--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -46,14 +46,14 @@
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>  
-                            <li><span class="type">Project</span>Foxtail Farms Site (Complete)</li>
+                            <li><span class="type">Project</span>Foxtail Farms Site (Complete) [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Foxtail Farms Site (Complete)</li>
+                            <li><span class="type">Project</span>Foxtail Farms Site (Complete) [cont.]</li>
                             <li><span class="type">Lab Time</span>Study Hints</li>
                             <li><span class="type">Survey</span>Intro to CMS Wrap Up</li>
                         </ul>
