--- a/cookbook/appetizers/web-dev-startup.html
+++ b/cookbook/appetizers/web-dev-startup.html
@@ -1820,15 +1820,19 @@
                     <div class="sideBySide">
                         <div class="textContainer">
                             <p>
-                                Now, jump back to Github Desktop. 
-                                In the app, you should see the 
-                                changes to your code-skeleton folder; 
-                                in this case, only the 
-                                index.html file.
+                                Now, jump back to Github Desktop 
+                                (the app, not the site). 
+                                
                             </p>
                             <p>
-                                (You might wonder why the 'images' and 
-                                'css' folders aren't in there. 
+                                In the app, you should see the 
+                                changes to your code-skeleton folder; 
+                                in this case, the style.css and
+                                index.html files.
+                            </p>
+                            <p>
+                                (You might wonder why the 'images'
+                                folder isn't in there. 
                                 Well, GitHub desktop only tracks 
                                 changes to files; folders are more 
                                 or less invisible to it, until a 
@@ -1837,7 +1841,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/web-dev-startup/indexhtml.png" 
+                                src="images/web-dev-startup/indexhtml_v2.png" 
                                 alt="GitHub Desktop when changes are ready for commit" 
                             >
                             <figcaption>
@@ -1863,9 +1867,15 @@
                                 </strong> 
                             </p>
                             <p>
-                                Add a commit Summary (required) 
-                                and Description (optional) in the 
+                                Add a commit Summary in the 
                                 textboxes in the bottom left of the app. 
+                            </p>
+                            <p class="indent">
+                                A commit summary is basically just a note 
+                                to yourself about what code you're saving.
+                                Something like the name of the assignment 
+                                or project, like "code skeleton setup", 
+                                will work just fine.
                             </p>
                             <p>
                                 Then click the [Commit to 
@@ -1875,7 +1885,7 @@
                         </div>
                         <div class="imageContainer">
                             <img 
-                                src="images/web-dev-startup/commit.png" 
+                                src="images/web-dev-startup/indexhtml_pt2.png" 
                                 alt="GitHub Desktop's commit section"
                             >
                             <figcaption>
